# Galaxy-Engine

./: CMakeLists.txt  LICENSE  README.md
.obsidian/: workspace.json
include/glad/: glad.h
src/: glad.c  main.cpp
src/app/: app.cpp  app.hpp
src/error/: error.cpp  error.h
src/input/: input.cpp
src/renderer/: renderer.cpp  renderer.h
